[[bin]]
name = "main"
path = "src/main.rs"

[package]
name = "machinenow_sub_server"
version = "0.1.0"
authors = ["Muriel Berehulka <murielguedespucci@gmail.com>"]
edition = "2018"

[dependencies]
sha-1 = "0.9.6"
base64 = "0.13.0"
byteorder = "1.4.3"

[dependencies.mio]
version = "0.7.11"
features = ["net","os-poll"]
